[gd_scene load_steps=9 format=3 uid="uid://dw0mscejnfjne"]

[ext_resource type="Script" path="res://Assets/Port v2/taro_port_3.gd" id="1_rqrd0"]
[ext_resource type="Texture2D" uid="uid://csr37dsoa3vje" path="res://Assets/Opdelt porte/taro_port_h.png" id="2_p3wag"]
[ext_resource type="Texture2D" uid="uid://3v5dhowmlvef" path="res://Assets/Opdelt porte/taro_port_v.png" id="3_mubyv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ap2d"]
size = Vector2(66, 20)

[sub_resource type="Animation" id="Animation_mr15m"]
resource_name = "taro_port_open_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v_3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_e48cs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v_3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_70fjo"]
resource_name = "taro_port_close_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v_3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wtgp"]
_data = {
"RESET": SubResource("Animation_e48cs"),
"taro_port_close_3": SubResource("Animation_70fjo"),
"taro_port_open_3": SubResource("Animation_mr15m")
}

[node name="taro_port_3" type="StaticBody2D"]
script = ExtResource("1_rqrd0")

[node name="taro_h_3" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_p3wag")

[node name="taro_v_3" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_mubyv")

[node name="taro_port_collision_3" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_0ap2d")

[node name="ap_taro_3" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5wtgp")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
